# example_project

./: .gitignore  README.md  pyproject.toml
doc/: Makefile  conf.py  docfile_with_python.rst  index.rst  test.rst
examples/: example.py  example_c_with_enable.py  example_w.py  example_z_with_enable.py  plot_example_a.py  plot_example_b.py
source/: enable_hello_world.py
source/module/: __init__.py  _hello_world.py  hello_world.py  test_enabling_mechanism.py
