[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "source"
version = "0.0"
dependencies = [
"sphinx-gallery==0.17.0",]
requires-python = ">=3.8"

description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"

[tool.hatch.build.targets.wheel]
packages = ["source"]
