[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "source"
version = "0.0"
dependencies = [
"Sphinx==8.0.2",
"sphinx-gallery==0.17.0",
"joblib==1.4.2",
"pytest==8.3.2",]
requires-python = ">=3.9"

description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"

[tool.hatch.build.targets.wheel]
include = ["source/**/*.py"] 